--- a/WinRomEmu/MainWindow.xaml
+++ b/WinRomEmu/MainWindow.xaml
@@ -1,7 +1,7 @@
-﻿<Window x:Class="EmulatorManager.MainWindow"
+﻿<Window x:Class="WinRomEmu.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-        xmlns:local="clr-namespace:EmulatorManager"
+        xmlns:local="clr-namespace:WinRomEmu"
         Title="Emulator Manager" Height="600" Width="800"
         Background="#1E1E1E">
     <Window.Resources>
